--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
     "body-parser": "^1.19.1",
     "express": "^4.17.2",
     "lodash": "^4.17.21",
-    "morgan": "^1.10.0"
+    "mongoose": "^6.1.7",
+    "morgan": "^1.10.0",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "eslint": "^8.5.0"
