--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lodash": "^4.17.21",
     "mongoose": "^6.1.7",
     "morgan": "^1.10.0",
+    "passport": "^0.5.2",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
