--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "mongoose": "^6.1.7",
     "morgan": "^1.10.0",
     "passport": "^0.5.2",
+    "passport-local": "^1.0.0",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
